# market_AI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  PIPELINE.md  README.md  agent.MD  alembic.ini  cli.py  config.example.yaml  docker-compose.yml  pyproject.toml
alembic/: env.py  script.py.mako
api/: deps.py  main.py
bots/: __init__.py  base_bot.py  equity_swing_bot.py  options_swing_bot.py
common/: config.py  db.py  logging.py  models.py  schema.py  time.py
config/: routine_rss_feeds.txt
data/: manual_alias_overrides.csv  seen_articles.json  sentiment_output.json  sp500.csv  us_listed_master.csv
docker/: entrypoint-api.sh  entrypoint-trader.sh
execution/: __init__.py  equity_execution.py  options_execution.py
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.app.json  tsconfig.test.json  vite.config.ts  vitest.config.ts
scripts/: diagnose_fundamentals.py  init_db.py  routine_fetch_articles.py  run_all.py
tests/: conftest.py  test_api_rankings.py  test_bot_isolation.py  test_composite_scorer.py  test_equity_sizing.py  test_execution_routing.py  test_exit_rules.py  test_exits.py  test_fundamental_scorer.py  test_fundamentals_refresh.py  test_greeks.py  test_indicators.py  test_options_planner.py  test_ranking.py  test_regime.py  test_risk.py  test_routine_provider.py  test_routine_provider_integration.py  test_scheduler.py  test_scoring.py  test_securities.py  test_sentiment_aggregate.py  test_sentiment_budget.py  test_sentiment_claude_provider.py  test_sentiment_dedup.py  (+4 more)
(+148 files in other folders)
